deployments/kubernetes/gitwebhookproxy.yaml
---
# Source: gitwebhookproxy/templates/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: true
    kubernetes.io/ingress.class: external-ingress
    monitor.stakater.com/enabled: true
  labels:
    app: gitwebhookproxy
    group: com.stakater.platform
    provider: stakater
    version: 0.2.38
    chart: "gitwebhookproxy-0.2.38"
    release: "RELEASE-NAME"
    heritage: "Tiller"
  name: gitwebhookproxy
  namespace: default
spec:
  rules:
  - host: gitwebhookproxy.tools.stackator.com
    http:
      paths:
      - backend:
          serviceName: gitwebhookproxy
          servicePort: 80
  tls:
  - hosts:
    - gitwebhookproxy.tools.stackator.com

---
# Source: gitwebhookproxy/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: gitwebhookproxy
    group: com.stakater.platform
    provider: stakater
    version: 0.2.38
    chart: "gitwebhookproxy-0.2.38"
    release: "RELEASE-NAME"
    heritage: "Tiller"
  name: gitwebhookproxy
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: gitwebhookproxy
      group: com.stakater.platform
      provider: stakater
  template:
    metadata:
      annotations:
        configmap.fabric8.io/update-on-change: gitwebhookproxy
      labels:
        app: gitwebhookproxy
        group: com.stakater.platform
        provider: stakater
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: GWP_PROVIDER
          valueFrom:
            configMapKeyRef:
              key: provider
              name: gitwebhookproxy
        - name: GWP_UPSTREAMURL
          valueFrom:
            configMapKeyRef:
              key: upstreamURL
              name: gitwebhookproxy
        - name: GWP_ALLOWEDPATHS
          valueFrom:
            configMapKeyRef:
              key: allowedPaths
              name: gitwebhookproxy
        - name: GWP_IGNOREDUSERS
          valueFrom:
            configMapKeyRef:
              key: ignoredUsers
              name: gitwebhookproxy
        - name: GWP_SECRET
          valueFrom:
            secretKeyRef:
              key: secret
              name: gitwebhookproxy
        image: "stakater/gitwebhookproxy:0.2.38"
        imagePullPolicy: IfNotPresent
        name: gitwebhookproxy
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5

---
# Source: gitwebhookproxy/templates/service.yaml

apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/ingress.annotations: |-
      ingress.kubernetes.io/force-ssl-redirect: true
      kubernetes.io/ingress.class: external-ingress
      monitor.stakater.com/enabled: true
  labels:
    expose: "true"
    app: gitwebhookproxy
    group: com.stakater.platform
    provider: stakater
    version: 0.2.38
    chart: "gitwebhookproxy-0.2.38"
    release: "RELEASE-NAME"
    heritage: "Tiller"
  name: gitwebhookproxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: gitwebhookproxy
    group: com.stakater.platform
    provider: stakater
